fixed sizing/spacing on homepage slideshow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -100,6 +100,8 @@ code {
   margin: 0 auto;
   overflow: hidden;
   max-width: 1000px;
+  max-height: 470px;
+  margin-bottom: 0px;
 }
 
 .slideshowSlider {
@@ -113,14 +115,15 @@ code {
   height: 400px;
   width: 100%;
   border-radius: 10px;
-  margin-top: 30px;
+  margin-top: 10px;
+  margin-bottom: 0px;
 }
 
 /* Slideshow Buttons */
 
 .slideshowDots {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 
 .slideshowDot {
@@ -129,7 +132,7 @@ code {
   width: 20px;
   border-radius: 50%;
   cursor: pointer;
-  margin: 15px 7px 0px;
+  margin: 5px 7px 0px;
   background-color: white;
 }
 
